# dioxus-tw-components

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: mail.yml
src/: bootstrap.rs  lib.rs  prelude.rs
src/components/: accordion.rs  button.rs  buttongroup.rs  callout.rs  carousel.rs  checkbox.rs  dropdown.rs  formlist.rs  hovercard.rs  icon.rs  input.rs  lightswitch.rs  markdown.rs  mod.rs  modal.rs  pagination.rs  placeholder.rs  progressbar.rs  radio.rs  scrollable.rs  select.rs  separator.rs  sidepanel.rs  slider.rs  sorttable.rs  table.rs  tabs.rs  textarea.rs  toast.rs  toggle.rs
src/theme/: component.rs  mod.rs
style/components/: accordion.css  button.css  buttongroup.css  callout.css  carousel.css  checkbox.css  dropdown.css  formlist.css  hovercard.css  icon.css  input.css  lightswitch.css  modal.css  pagination.css  placeholder.css  progressbar.css  radio.css  scrollable.css  select.css  separator.css  sidepanel.css  slider.css  sorttable.css  table.css  tabs.css  textarea.css  theme.css  toast.css  toggle.css
