[package]
name = "dioxus-tw-components"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Components made for Dioxus"
readme = "README.md"
homepage = "https://42angouleme.github.io/dioxus-tw-components-docsite/"
repository = "https://github.com/42Angouleme/dioxus-components"
keywords = ["web", "desktop", "gui", "dioxus", "components"]
authors = ["Louis Truchelut", "kbz_8", "Ziale", "gpoblon", "42Angouleme"]

[lib]
name = "dioxus_tw_components"
path = "src/lib.rs"

[dependencies]
dioxus-tw-components-sorttable-macro = { version = "0.1.0", path = "./dioxus-tw-components-sorttable-macro" }
dioxus = { version = "0.7.3", features = [] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
chrono = "0.4.39"
log = "0.4.22"
console = "0.15.10"
serde_json = "1.0.139"
slugify = "0.1.0"
pulldown-cmark = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
theme = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
minify-html = "0.16.4"
